--- a/src/components/ChatBox/ChatBox.css
+++ b/src/components/ChatBox/ChatBox.css
@@ -27,7 +27,7 @@
     justify-content: center;
 }
 
-.chat-user img {
+.chat-user img{
     width: 25px;
     border-radius: 50%;
 }
@@ -40,14 +40,14 @@
 .chat-user p {
     flex: 1;
     font-weight: 500;
-    font-size: 20px; /* Corrected property */
+    font-size: 20px; 
     color: #393939;
     display: flex;
     align-items: center;
     gap: 5px;
 }
 
-.chat-input {
+.chat-input{
     display: flex;
     align-items: center;
     gap: 12px;
